<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sergedb.fla</groupId>
    <artifactId>formal-languages</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Formal Languages Projects</name>
    <description>Multi-module Maven project for Formal Languages projects</description>

    <modules>
        <module>projects/01-regular-grammars</module>
        <module>projects/02-finite-automata</module>
        <module>projects/03-lexer-scanner</module>
        <module>projects/04-regular-expressions</module>
        <module>projects/05-chomsky-normal-form</module>
        <module>projects/06-parser-ast</module>

    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>